--- a/index.html
+++ b/index.html
@@ -218,6 +218,76 @@
         </dl>
       </section>
 
+      <section class="grid-section galeria" data-animate="scroll">
+        <ul class="custom-controls">
+          <li class="custom-controls__item">
+            <img
+              class="custom-controls__thumb"
+              src="./img/slider-imgs/foto1-thumb.jpg"
+              alt=""
+            />
+          </li>
+          <li class="custom-controls__item">
+            <img
+              class="custom-controls__thumb"
+              src="./img/slider-imgs/foto2-thumb.jpg"
+              alt=""
+            />
+          </li>
+          <li class="custom-controls__item">
+            <img
+              class="custom-controls__thumb"
+              src="./img/slider-imgs/foto3-thumb.jpg"
+              alt=""
+            />
+          </li>
+          <li class="custom-controls__item">
+            <img
+              class="custom-controls__thumb"
+              src="./img/slider-imgs/foto4-thumb.jpg"
+              alt=""
+            />
+          </li>
+          <li class="custom-controls__item">
+            <img
+              class="custom-controls__thumb"
+              src="./img/slider-imgs/foto5-thumb.jpg"
+              alt=""
+            />
+          </li>
+          <li class="custom-controls__item">
+            <img
+              class="custom-controls__thumb"
+              src="./img/slider-imgs/foto6-thumb.jpg"
+              alt=""
+            />
+          </li>
+        </ul>
+
+        <div class="slider">
+          <ul class="slider__slides">
+            <li class="slider__slide">
+              <img src="./img/slider-imgs/foto1.jpg" alt="" />
+            </li>
+            <li class="slider__slide">
+              <img src="./img/slider-imgs/foto2.jpg" alt="" />
+            </li>
+            <li class="slider__slide">
+              <img src="./img/slider-imgs/foto3.jpg" alt="" />
+            </li>
+            <li class="slider__slide">
+              <img src="./img/slider-imgs/foto4.jpg" alt="" />
+            </li>
+            <li class="slider__slide">
+              <img src="./img/slider-imgs/foto5.jpg" alt="" />
+            </li>
+            <li class="slider__slide">
+              <img src="./img/slider-imgs/foto6.jpg" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <section class="grid-section numeros" data-animate="scroll">
         <h1 class="titulo">Números</h1>
 
